--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-tensorflow==2.10.0
-streamlit==1.25.0
+tensorflow>=2.10.0
+streamlit>=1.25.0
 numpy>=1.21.0
 pandas>=1.3.0
 plotly>=5.0.0
@@ -10,4 +10,3 @@ scikit-learn>=1.0.0
 keras>=2.10.0
 joblib>=1.1.0
 kaggle>=1.5.12
-protobuf==3.9.2
