--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 tensorflow-cpu==2.10.0  # smaller CPU-only version
-scikit-learn==1.1.3
+streamlit==1.25.0
 numpy>=1.21.0
 pandas>=1.3.0
 plotly>=5.0.0
