--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
-tensorflow-cpu==2.19.0
-streamlit==1.9.0
-numpy==2.1.3
-pandas==2.2.3
-plotly==6.1.2
-Pillow==11.2.1
-matplotlib==3.10.3
-seaborn==0.13.2
-scikit-learn==1.6.1
-keras==3.10.0
-joblib==1.5.1
-kaggle==1.7.4.5
+tensorflow-cpu==2.10.0
+streamlit==1.25.0
+numpy>=1.21.0
+pandas>=1.3.0
+plotly>=5.0.0
+Pillow>=8.0.0
+matplotlib>=3.4.3
+seaborn>=0.11.2
+scikit-learn>=1.0.0
+keras>=2.10.0
+joblib>=1.1.0
+kaggle>=1.5.12
