--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,13 @@
-tensorflow-cpu>=2.10.0,<2.13.0
-streamlit>=1.25.0
-numpy>=1.21.0
+tensorflow-cpu==2.10.0
+streamlit>=1.21.0
+numpy==1.21.6
 pandas>=1.3.0
 plotly>=5.0.0
 Pillow>=8.0.0
 matplotlib>=3.4.3
 seaborn>=0.11.2
 scikit-learn>=1.0.0
+keras>=2.10.0
 joblib>=1.1.0
 kaggle>=1.5.12
+altair==4.2.2
