--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,16 @@
 tensorflow-cpu==2.10.0
 streamlit>=1.21.0
-numpy==1.21.6
-pandas>=1.3.0
-plotly>=5.0.0
-Pillow>=8.0.0
-matplotlib>=3.4.3
-seaborn>=0.11.2
-scikit-learn>=1.0.0
+numpy>=2.2.6
+pandas>=2.0.3
+plotly>=6.1.2
+Pillow>=11.2.1
+matplotlib>=3.8.4
+seaborn>=0.13.2
+scikit-learn>=1.6.1
 keras>=2.10.0
-joblib>=1.1.0
-kaggle>=1.5.12
+joblib>=1.5.1
+kaggle>=1.7.4
 altair==4.2.2
+jax>=0.4.38
+jaxlib>=0.4.38
+scipy>=1.11.4
