--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,81 @@
-tensorflow-cpu==2.10.0
-streamlit>=1.21.0
-numpy>=2.2.6
-pandas>=2.0.3
-plotly>=6.1.2
-Pillow>=11.2.1
-matplotlib>=3.8.4
-seaborn>=0.13.2
-scikit-learn>=1.6.1
-keras>=2.10.0
-joblib>=1.5.1
-kaggle>=1.7.4
-altair==4.2.2
-jax>=0.4.38
-jaxlib>=0.4.38
-scipy>=1.11.4
+absl-py==2.3.0
+altair==5.5.0
+astunparse==1.6.3
+attrs==25.3.0
+bleach==6.2.0
+blinker==1.9.0
+cachetools==5.5.2
+certifi==2025.4.26
+charset-normalizer==3.4.2
+click==8.2.1
+contourpy==1.3.2
+cycler==0.12.1
+flatbuffers==25.2.10
+fonttools==4.58.1
+gast==0.6.0
+gitdb==4.0.12
+GitPython==3.1.44
+google-pasta==0.2.0
+grpcio==1.72.1
+h5py==3.13.0
+idna==3.10
+jax==0.4.38
+jaxlib==0.4.38
+Jinja2==3.1.6
+joblib==1.5.1
+jsonschema==4.24.0
+jsonschema-specifications==2025.4.1
+kaggle==1.7.4.5
+keras==3.10.0
+kiwisolver==1.4.8
+libclang==18.1.1
+Markdown==3.8
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
+matplotlib==3.10.3
+mdurl==0.1.2
+ml_dtypes==0.5.1
+namex==0.1.0
+narwhals==1.41.0
+numpy==1.26.4
+opt_einsum==3.4.0
+optree==0.16.0
+packaging==24.2
+pandas==2.2.3
+pillow==11.2.1
+plotly==6.1.2
+protobuf==4.25.8
+pyarrow==20.0.0
+pydeck==0.9.1
+Pygments==2.19.1
+pyparsing==3.2.3
+python-dateutil==2.9.0.post0
+python-slugify==8.0.4
+pytz==2025.2
+referencing==0.36.2
+requests==2.32.3
+rich==14.0.0
+rpds-py==0.25.1
+scikit-learn==1.6.1
+scipy==1.15.3
+seaborn==0.13.2
+six==1.17.0
+smmap==5.0.2
+streamlit==1.45.1
+tenacity==9.1.2
+tensorboard==2.16.2
+tensorboard-data-server==0.7.2
+tensorflow==2.16.2
+tensorflow-io-gcs-filesystem==0.37.1
+termcolor==3.1.0
+text-unidecode==1.3
+threadpoolctl==3.6.0
+toml==0.10.2
+tornado==6.5.1
+tqdm==4.67.1
+typing_extensions==4.14.0
+tzdata==2025.2
+urllib3==2.4.0
+webencodings==0.5.1
+Werkzeug==3.1.3
+wrapt==1.17.2
