--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ plotly>=5.0.0
 altair>=5.0.0  # Optional
 
 # Machine Learning
-tensorflow>=2.15.0
+tensorflow-cpu>=2.15.0
 scikit-learn>=1.4.0
 ml_dtypes>=0.3.0  # Optional for TensorFlow
 
