--- a/requirements.txt
+++ b/requirements.txt
@@ -4,12 +4,12 @@ pandas>=2.0.0
 numpy>=1.24.0
 pillow>=10.0.0
 plotly>=5.0.0
-altair>=5.0.0  # Optional
+# altair>=5.0.0  # Optional
 
 # Machine Learning
 tensorflow-cpu>=2.15.0
 scikit-learn>=1.4.0
-ml_dtypes>=0.3.0  # Optional for TensorFlow
+# ml_dtypes>=0.3.0  # Optional for TensorFlow
 
 # Visualization
 matplotlib>=3.7.0
@@ -19,4 +19,4 @@ seaborn>=0.12.0
 python-dateutil>=2.8.0
 requests>=2.30.0
 tqdm>=4.65.0
-protobuf>=4.25.0  # Optional
+# protobuf>=4.25.0  # Optional
