--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,13 @@
 # Core dependencies - let pip resolve sub-dependencies
-streamlit>=1.40.0
+streamlit==1.40.0
 pandas>=2.0.0
-numpy>=1.24.0
+numpy==1.24.0
 pillow>=10.0.0
 plotly>=5.0.0
 # altair>=5.0.0  # Optional
 
 # Machine Learning
-tensorflow-cpu>=2.15.0
+tensorflow-cpu==2.15.0
 scikit-learn>=1.4.0
 # ml_dtypes>=0.3.0  # Optional for TensorFlow
 
